--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
     "target-dir": "JJs/Bundle/GeonamesBundle",
     "minimum-stability": "dev",
     "require": {
-        "php": "~5.4",
-        "guzzle/http": "~3.5",
+        "php": "^5.4",
+        "guzzle/http": "~3.5|6.*",
         "jjs/common": "*",
-        "symfony/framework-bundle": "~2.1"
+        "symfony/framework-bundle": "~2.1|3.*"
     },
     "require-dev": {
-        "symfony/console": "~2.1",
-        "symfony/dom-crawler": "~2.1",
-        "symfony/css-selector": "~2.2",
+        "symfony/console": "~2.1|3.*",
+        "symfony/dom-crawler": "~2.1|3.*",
+        "symfony/css-selector": "~2.2|3.*",
         "jms/cg": "~1.0"
     }
 }
